--- a/manifest.json
+++ b/manifest.json
@@ -2,27 +2,27 @@
     "name": "YAPP PWA template",
     "short_name": "YAPP",
     "icons": [{
-      "src": "./assets/logos/yapplogo128.png",
+      "src": "./assets/logos/logo128.png",
         "sizes": "128x128",
         "type": "image/png"
       }, {
-        "src": "./assets/logos/yapplogo144.png",
+        "src": "./assets/logos/logo144.png",
         "sizes": "144x144",
         "type": "image/png"
       }, {
-        "src": "./assets/logos/yapplogo152.png",
+        "src": "./assets/logos/logo152.png",
         "sizes": "152x152",
         "type": "image/png"
       }, {
-        "src": "./assets/logos/yapplogo192.png",
+        "src": "./assets/logos/logo192.png",
         "sizes": "192x192",
         "type": "image/png"
       }, {
-        "src": "./assets/logos/yapplogo256.png",
+        "src": "./assets/logos/logo256.png",
         "sizes": "256x256",
         "type": "image/png"
       }, {
-        "src": "./assets/logos/yapplogo512.png",
+        "src": "./assets/logos/logo512.png",
         "sizes": "512x512",
         "type": "image/png"
       }],
